<resources>
    <string name="app_name">En commun</string>
    <string name="action_settings">Settings</string>
    <string name="edit_login">Login</string>
    <string name="button_settings_send">Log in</string>
    <string name="edit_female">Female</string>
    <string name="edit_male">Male</string>
    <string name="radio_ageTo25"> to 25</string>
    <string name="radio_ageTo65">25-65</string>
    <string name="radio_ageOver65">65+</string>
    <string name="edit_car">Car model i.e. Peugeot 206</string>
    <string name="string_driver">Are you a taxi driver? </string>
    <string name="edit_Cap0">0</string>
    <string name="edit_Cap1">l</string>
    <string name="edit_Cap2">2</string>
    <string name="edit_Cap3">3</string>
    <string name="edit_Cap4">4</string>
    <string name="edit_Cap5">5</string>
    <string name="edit_Cap6">6</string>
    <string name="string_phone">Your phone number</string>
    <string name="string_regNumber">Car registration number</string>
    <string name="noCarData">Please fill in car data.</string>
    <string name="noUserData">Please fill in user data</string>
    <string name="noPhoto">Please snap a selfie</string>
    <string name="warning">Warning</string>
    <string name="fsPax">http://services.arcgis.com/rQ4nYWw3vwjxcr1D/arcgis/rest/services/MaroccoData/FeatureServer/0</string>
    <string name="fsDriver">http://services.arcgis.com/rQ4nYWw3vwjxcr1D/arcgis/rest/services/MaroccoData/FeatureServer/1</string>
    <string name="fsInc">http://services.arcgis.com/rQ4nYWw3vwjxcr1D/arcgis/rest/services/MaroccoData/FeatureServer/2</string>
    <string name="CalculatingRoute">Finding passengers and calculating the best route...</string>
    <string name="RouteMileage">Total distance is</string>
    <string name="RouteTime">which should take </string>
    <string name="RouteCost">which should cost </string>
    <string name="AddingStops">Choose method of adding stop</string>
    <string name="AddingStartingTitle">Add starting point</string>
    <string name="AddingEndingTitle">Add ending point</string>
    <string name="AddingStopsMap">Map</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="AddingStopsVoice">Voice</string>
    <string name="rank">rank:</string>
    <string name="age">age:</string>
    <string name="phone">phone:</string>
    <string name="sex">sex:</string>
    <string name="foundAddress">Address found:</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="SeetingNoPlaces">Number of passengers</string>
    <string name="SettingMaxBuffer">Maximum detour distance</string>

    <string-array
        name="placesArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array
        name="bufferArray">
        <item>0</item>
        <item>300</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
    </string-array>
</resources>
